--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ beautifulsoup4
 certifi
 crispy-bootstrap5
 distlib
+dj-database-url
 Django
 django-bootstrap4
 django-crispy-forms
@@ -14,6 +15,7 @@ pipenv
 platformdirs
 protobuf
 psycopg2
+psycopg2-binary
 PyExecJS
 setuptools
 six
